--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "node bin/build.js --dev",
-        "build": "node bin/build.js"
+        "dev:styles": "postcss resources/css/index.css -o resources/dist/filament-auto-logout.css --watch",
+        "dev:scripts": "node bin/build.js --dev",
+        "build:styles": "postcss resources/css/index.css -o resources/dist/filament-auto-logout.css --minify",
+        "build:scripts": "node bin/build.js",
+        "dev": "npm-run-all --parallel dev:*",
+        "build": "npm-run-all build:*"
     },
     "devDependencies": {
-        "esbuild": "^0.17.19"
+        "cssnano": "^6.0.1",
+        "postcss": "^8.4.27",
+        "postcss-import":"^16.1.1",
+        "postcss-cli": "^10.1.0",
+        "postcss-nesting": "^13.0.0",
+        "esbuild": "^0.19.2",
+        "npm-run-all": "^4.1.5",
+        "tailwindcss": "^4.1.17"
     }
 }
